# macuitest

./: .gitignore  .pylintrc  CODEOWNERS  LICENSE  MANIFEST.in  README  README.md  __init__.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
config/: .local_config.conf  default_config.conf
lib/: browser.py  core.py  db_manager.py  mouse.py
lib/applescript_lib/: applescript.py  applescript_wrapper.py  kae.py
lib/apps/: application.py  browser.py
lib/elements/: applescript_element.py  native_element.py  ui_element.py
lib/elements/ax11/: accessibility.py  callbacks.py  converter.py  errors.py  native_element.py  observer.py
lib/elements/ax11/mixins/: search.py  wait.py
lib/elements/controllers/: keyboard_controller.py  mouse.py  mouse_controller.py
lib/elements/uie/: screenshot_path_builder.py
lib/operating_system/: color_meter.py  crash_reporter.py  defaults.py  env.py  file_manager.py  hosts.py  login_window.py  macos.py  memory_manager.py  networking.py  plist_helper.py  security_manager.py  service_manager.py  shell_executor.py  system_information.py  tcc.py  time_manager.py
lib/tests/unit/: test_env.py
lib/ui_element/: opencv_wrapper.py  screenshot_path_builder.py
macuitest/config/: colors.py  config_parser.py  constants.py  country_codes.py
macuitest/lib/: core.py
macuitest/lib/applescript_lib/: aecodecs.py  aeconverter.py  applescript_wrapper.py
macuitest/lib/apps/: application.py  browser.py
macuitest/lib/elements/: applescript_element.py  native_element.py  ui_element.py
macuitest/lib/elements/ax11/: accessibility.py  callbacks.py  converter.py  element_lookup.py  errors.py  native_element.py  native_ui_element.py  observer.py
macuitest/lib/elements/controllers/: keyboard_controller.py  keyboard_mappings.py  mouse.py  mouse_controller.py
macuitest/lib/elements/native/: callbacks.py  calls.py  element_lookup.py  native_ui_element.py
macuitest/lib/operating_system/: color_meter.py  crash_reporter.py  db_manager.py  defaults.py  disk_util.py  env.py  file_manager.py  hosts.py  login_window.py  macos.py  memory_manager.py  networking.py  plist_helper.py  security_manager.py  service_manager.py  shell_executor.py  tcc.py  time_manager.py
macuitest/lib/ui/: monitor.py  opencv_wrapper.py
src/macuitest/config/: colors.py  constants.py  country_codes.py
src/macuitest/lib/: core.py
tests/unit/: test_env.py
(+46 files in other folders)
