[build-system]
requires = ['setuptools>=42.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
addopts = '-vvvv --junitxml ./junit.xml'
testpaths = [
    'tests',
]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
# See https://pycqa.github.io/isort/docs/configuration/profiles.html
profile = 'black'
# Override profile setup:
line_length = 100
force_single_line = true

[tool.flake8]
max-line-length = 100
extend-ignore = 'E203,'
max-complexity = 7

[tool.mypy]
mypy_path = 'src'
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
