[metadata]
name = macuitest
version = 0.7.43
description = A simple UI testing framework for macOS
long_description = file: README.md
long_description_content_type = text/markdown
author = Andrii Kislitsyn
author_email = andriikislitsyn@gmail.com
url = https://github.com/andriykislitsyn/macuitest
license = MIT
license_file = LICENSE
keywords = macOS, Testing, E2E, UI, Automator, Accessibility
platforms = osx
classifiers =
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Education :: Testing
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:

install_requires =
    biplist>=1.0.3
    opencv-python>=4.5.3
    pyobjc-framework-ApplicationServices>=7.3
    pyobjc-framework-AVFoundation>=7.3
    pyobjc-framework-Cocoa>=7.3
    pyobjc-framework-CoreMedia>=7.3
    pyobjc-framework-CoreText>=7.3
    pyobjc-framework-Quartz>=7.3
    pytesseract>=0.3
python_requires = >=3.7.0
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    black
    flake8
    isort
    mypy
    tox
